--- a/index.css
+++ b/index.css
@@ -66,8 +66,13 @@ h4{
 }
 
 #foto7{
-text-align: center;
 margin-bottom: 50px;
+text-align: center;
+}
+
+#foto7 img{
+    width: 400px;
+    height: 300px;
 }
 
 .container{
